--- a/gan-ae/ganae_mod.ipynb
+++ b/gan-ae/ganae_mod.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "taI6OSXMnJCv"
       },
@@ -27,12 +27,14 @@
         "import sys\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score\n"
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.mixture import GaussianMixture\n",
+        "import matplotlib.pyplot as plt\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -42,8 +44,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "this is the image shape  (1, 28, 28)\n"
           ]
@@ -78,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "sxM1bS38nJC4"
       },
@@ -106,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,15 +118,15 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Downloading and processing MNIST dataset...\n"
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "100%|██████████| 9.91M/9.91M [00:02<00:00, 4.57MB/s]\n",
             "100%|██████████| 28.9k/28.9k [00:00<00:00, 133kB/s]\n",
@@ -230,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "YcCwXMHMnJC6"
       },
@@ -337,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "pHi74ASKnJC9"
       },
@@ -371,8 +373,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Epoch [1/70]\n",
             "    Reconstruction Loss: 236.9476\n",
@@ -689,31 +691,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
+        "id": "t2qjjbmEnJDB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "t2qjjbmEnJDB",
         "outputId": "5484f672-c084-47e6-d779-6d88914cf8cb"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "BCE: 80.3978, MSE: 9.6159\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(80.397849609375, 9.615925988769531)"
             ]
           },
-          "execution_count": 8,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 8
         }
       ],
       "source": [
@@ -748,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "8J-nuGasnJDD"
       },
@@ -799,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -809,21 +811,21 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Classification Error: 14.03%\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "14.029999999999998"
             ]
           },
-          "execution_count": 12,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 12
         }
       ],
       "source": [
@@ -832,7 +834,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "eDB6BTKsnJDF"
       },
@@ -887,7 +889,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -897,8 +899,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Average Masked MSE: 0.1125\n",
             "0.1125103900520169\n"
@@ -912,7 +914,107 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "source": [
+        "def extract_latent_representations(model, data_loader, device='cpu'):\n",
+        "    \"\"\"\n",
+        "    Extract latent representations (mu) from the data loader using the model's encoder.\n",
+        "    \"\"\"\n",
+        "    model.eval()\n",
+        "    latent_representations = []\n",
+        "    with torch.no_grad():\n",
+        "        for x, _ in data_loader:\n",
+        "            x = x.to(device)  # Shape: [batch_size, 1, 28, 28]\n",
+        "            mu, _ = model.encoder(x)  # Get mu from encoder\n",
+        "            latent_representations.append(mu.cpu().numpy())\n",
+        "    X_latent = np.vstack(latent_representations)\n",
+        "    return X_latent\n",
+        "\n",
+        "def train_gmm(X_latent, n_components=10):\n",
+        "    \"\"\"\n",
+        "    Train a GMM on the latent representations.\n",
+        "    \"\"\"\n",
+        "    gmm = GaussianMixture(n_components=n_components, covariance_type='full', random_state=42)\n",
+        "    gmm.fit(X_latent)\n",
+        "    # Log GMM fit quality\n",
+        "    print(f\"GMM BIC: {gmm.bic(X_latent):.2f}\")\n",
+        "    return gmm\n",
+        "\n",
+        "def monte_carlo_log_likelihood(model, data_loader, gmm, latent_dim, num_samples=5000, device='cpu'):\n",
+        "    \"\"\"\n",
+        "    Compute Monte Carlo log-likelihood using GMM-sampled latent vectors for GANAE on MNIST.\n",
+        "\n",
+        "    Args:\n",
+        "        model: GANAE model with encoder, decoder, and discriminator.\n",
+        "        data_loader: DataLoader for test data (MNIST, normalized to [0, 1]).\n",
+        "        gmm: Fitted GaussianMixture model for latent space.\n",
+        "        latent_dim: Dimension of the latent space (e.g., 40 for GANAE).\n",
+        "        num_samples: Number of Monte Carlo samples.\n",
+        "        device: Device to run computations ('cpu' or 'cuda').\n",
+        "\n",
+        "    Returns:\n",
+        "        average_log_px: Estimated log p(x) averaged over test images.\n",
+        "    \"\"\"\n",
+        "    model.eval()\n",
+        "\n",
+        "    # Sample from GMM\n",
+        "    gmm_samples, _ = gmm.sample(num_samples)\n",
+        "    z_samples = torch.tensor(gmm_samples, dtype=torch.float32).to(device)\n",
+        "    log_p_z = gmm.score_samples(gmm_samples)  # Log p(z) for each sample (shape: [num_samples])\n",
+        "\n",
+        "    # Generate reconstructions\n",
+        "    with torch.no_grad():\n",
+        "        recon_xs = model.decoder(z_samples)  # Shape: [num_samples, 1, 28, 28]\n",
+        "        # No sigmoid needed, as Decoder already applies it\n",
+        "\n",
+        "    # Visualize a sample reconstruction for debugging\n",
+        "    with torch.no_grad():\n",
+        "        plt.imshow(recon_xs[0].cpu().squeeze(), cmap='gray')\n",
+        "        plt.title(\"Sample Reconstruction\")\n",
+        "        plt.show()\n",
+        "\n",
+        "    # Compute log p(x) for each test image\n",
+        "    total_log_px = 0\n",
+        "    num_images = 0\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for x, _ in data_loader:\n",
+        "            x = x.to(device)  # Shape: [batch_size, 1, 28, 28]\n",
+        "            x_bin = (x > 0.5).float()  # Binarize MNIST images\n",
+        "            batch_size = x_bin.size(0)\n",
+        "\n",
+        "            # Compute log p(x|z) for all reconstructions against this batch\n",
+        "            log_p_x_given_z = torch.zeros(num_samples, device=device)\n",
+        "            for i in range(0, num_samples, batch_size):\n",
+        "                batch_recon = recon_xs[i:i + batch_size]\n",
+        "                effective_size = min(batch_recon.size(0), batch_size)\n",
+        "                bce = F.binary_cross_entropy(\n",
+        "                    batch_recon[:effective_size],\n",
+        "                    x_bin[:effective_size],\n",
+        "                    reduction='none'\n",
+        "                )\n",
+        "                log_p_x_given_z[i:i + effective_size] = -bce.sum(dim=[1, 2, 3])\n",
+        "\n",
+        "            # Compute log p(x) = log mean(exp(log p(x|z) + log p(z)))\n",
+        "            log_px_z = log_p_x_given_z.cpu().numpy() + log_p_z\n",
+        "            log_px = torch.logsumexp(torch.tensor(log_px_z), dim=0) - np.log(num_samples)\n",
+        "            total_log_px += log_px.item() * batch_size\n",
+        "            num_images += batch_size\n",
+        "\n",
+        "    average_log_px = total_log_px / num_images\n",
+        "    return average_log_px\n",
+        "\n",
+        "latent_dim = 40\n",
+        "n_components = 10\n",
+        "num_samples = 5000\n",
+        "device = 'cpu'\n",
+        "\n",
+        "X_latent = extract_latent_representations(ganae, train_loader, device=device)\n",
+        "\n",
+        "gmm = train_gmm(X_latent, n_components=n_components)\n",
+        "\n",
+        "log_px_estimate = monte_carlo_log_likelihood(ganae, test_loader, gmm, latent_dim, num_samples, device=device)\n",
+        "print(f\"Estimated log p(x): {log_px_estimate}\")"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -920,70 +1022,31 @@
         "id": "hOpJPvx54ipJ",
         "outputId": "a4374025-01c3-4f8e-b904-c1c6d00f884b"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Estimated log p(x): -207.98837602615356\n"
           ]
         }
-      ],
-      "source": [
-        "import torch\n",
-        "import torch.nn.functional as F\n",
-        "\n",
-        "def monte_carlo_log_px(model, data_loader, num_samples=1000, device='cpu'):\n",
-        "    model.eval()\n",
-        "    total_log_px = 0\n",
-        "    num_images = 0\n",
-        "\n",
-        "    with torch.no_grad():\n",
-        "        for batch in data_loader:\n",
-        "            x_real = batch[0].to(device)\n",
-        "            batch_size = x_real.size(0)\n",
-        "\n",
-        "            z_samples = torch.randn(num_samples, latent_dim).to(device)\n",
-        "\n",
-        "            x_recon = model.decoder(z_samples)\n",
-        "\n",
-        "            for i in range(batch_size):\n",
-        "                log_px = compute_log_px(x_real[i], x_recon)\n",
-        "                total_log_px += log_px.item()\n",
-        "                num_images += 1\n",
-        "\n",
-        "            if num_images >= num_samples:\n",
-        "                break\n",
-        "\n",
-        "    average_log_px = total_log_px / num_images\n",
-        "    return average_log_px\n",
-        "\n",
-        "def compute_log_px(x_real, x_recon):\n",
-        "    x_real_expanded = x_real.unsqueeze(0).expand(x_recon.size(0), -1, -1, -1)\n",
-        "\n",
-        "    log_px = -F.binary_cross_entropy(x_recon, x_real_expanded, reduction='none')\n",
-        "    log_px = torch.logsumexp(log_px.sum(dim=[1,2,3]), dim=0) - torch.log(torch.tensor(x_recon.size(0)))\n",
-        "    return log_px\n",
-        "\n",
-        "log_px_estimate = monte_carlo_log_px(ganae, test_loader, num_samples=1000, device='cpu')\n",
-        "print(f\"Estimated log p(x): {log_px_estimate}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [],
       "metadata": {
         "id": "LfCD1ZBrMSfg"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -1000,7 +1063,8 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.12"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
